# mini-redis

./: .gitignore  CMakeLists.txt  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md
include/core/: redis_value.h
src/: main.cpp
tests/: CMakeLists.txt
tests/core/: test_redis_value_basic.cpp
